--- a/src/app/sesion/sesion.page.html
+++ b/src/app/sesion/sesion.page.html
@@ -8,11 +8,11 @@
   <ion-list [inset]="true">
   <ion-item>
     <ion-label><ion-icon name="mail-outline"> </ion-icon> Email:</ion-label>
-    <ion-input type="email" placeholder="email@domain.com" required="Ingresa el email" ></ion-input>
+    <ion-input type="email" placeholder="email@domain.com" [(ngModel)]="this.email" required></ion-input>
   </ion-item>
   <ion-item>
     <ion-label><ion-icon name="key-outline"> </ion-icon> Password</ion-label>
-    <ion-input type="password" placeholder="password" required="Ingresa la contraseña"></ion-input>
+    <ion-input type="password" placeholder="Escribe el password" [(ngModel)]="this.password" required></ion-input>
   </ion-item>
   <ion-button color="success" (click)="verificar()" expand="block">Ingresar</ion-button>
   <ion-button [routerLink]="['/registro']" expand="block">Registrarse</ion-button>
