--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -9,24 +9,24 @@
   <ion-list>
     <ion-list>
       <ion-item>
-        <ion-input label="Nombre  completo" placeholder="Enter text"></ion-input>
+        <ion-input label="Nombre  completo" [(ngModel)]="usuario.nombre" placeholder="Escribre tu nombre" required></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input label="Password input" type="password" value="password"></ion-input>
+        <ion-input label="Password" [(ngModel)]="usuario.password" type="password" placeholder="Ingresa la contraseña" required></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input label="Email input" type="email" placeholder="email@domain.com"></ion-input>
+        <ion-input label="Email" type="email" [(ngModel)]="usuario.email" placeholder="email@domain.com" required></ion-input>
       </ion-item>
-
+      <ion-label>TIPO DE USUARIOS:</ion-label>
       <ion-item>
-        <ion-radio-group value="rol">
+        <ion-radio-group  [(ngModel)]="usuario.tipo" required>
           <ion-radio value="admin">Administrador</ion-radio><br />
           <ion-radio value="estudiante">Estudiante</ion-radio><br />
         </ion-radio-group>
       </ion-item>
-      <ion-button expand="block">Guardar</ion-button>
+      <ion-button (click)="nuevo()" expand="block">Guardar</ion-button>
       <ion-button color="success" [routerLink]="['/sesion']" expand="block">Iniciar Sesión</ion-button>
     </ion-list>
   </ion-list>
