--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,12 +1,12 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+    <ion-tab-button tab="tab1" href="/tabs/tab1"  *ngIf="rol==='estudiante'">
       <ion-icon aria-hidden="true" name="create-outline"></ion-icon>
       <ion-label>Anteproyecto</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="tab2" href="/tabs/tab2" *ngIf="rol==='admin'">
       <ion-icon aria-hidden="true" name="reorder-four-outline"></ion-icon>
       <ion-label>Lista</ion-label>
     </ion-tab-button>
