--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -20,13 +20,13 @@
       <ion-col>{{item.titulo}}</ion-col>
       <ion-col>{{item.estado}}</ion-col>
       <ion-col>
-        <ion-button id="open-modal" expand="block"  (click)="verproyecto(x)"><ion-icon name="eye-outline"></ion-icon></ion-button>
+        <ion-button (click)="setOpen(true)" expand="block" (click)="verproyecto(x)"><ion-icon name="eye-outline"></ion-icon></ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
 
-<ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+<ion-modal [isOpen]="isModalOpen" (willDismiss)="onWillDismiss($event)">
   <ng-template>
     <ion-header>
       <ion-toolbar>
@@ -42,40 +42,46 @@
     <ion-content class="ion-padding">
      <ion-list >
       <ion-item>
-        <ion-input label="ID:"  disabled labelPlacement="floating" value="{{this.anteproyecto.id}}"></ion-input>
+        <ion-textarea label="ID:"  disabled labelPlacement="floating" value="{{this.anteproyecto.id}}"></ion-textarea>
       </ion-item>
       <ion-item>
-        <ion-input label="IDUSER:"  disabled labelPlacement="floating" value="{{this.anteproyecto.idusuario}}"></ion-input>
+        <ion-textarea label="IDUSER:"  disabled labelPlacement="floating" value="{{this.anteproyecto.idusuario}}"></ion-textarea>
       </ion-item>
     <ion-item>
-      <ion-input label="Titulo:"  disabled labelPlacement="floating" value="{{this.anteproyecto.titulo}}"></ion-input>
+      <ion-textarea label="Titulo:"  disabled labelPlacement="floating" value="{{this.anteproyecto.titulo}}"></ion-textarea>
     </ion-item>
     <ion-item>
-      <ion-input label="Descripción:"  disabled labelPlacement="floating" value="{{this.anteproyecto.descripciones}}"></ion-input>
+      <ion-textarea label="Descripción:"  disabled labelPlacement="floating" value="{{this.anteproyecto.descripciones}}"></ion-textarea>
     </ion-item>
     <ion-item>
-      <ion-input label="Objetivo:" disabled labelPlacement="floating" value="{{this.anteproyecto.objetivo}}"></ion-input>
+      <ion-textarea label="Objetivo:" disabled labelPlacement="floating" value="{{this.anteproyecto.objetivo}}"></ion-textarea>
     </ion-item>
     <ion-item>
-      <ion-input label="Planteamiento:"  disabled labelPlacement="floating" value="{{this.anteproyecto.plateamiento}}"></ion-input>
+      <ion-textarea label="Planteamiento:"  disabled labelPlacement="floating" value="{{this.anteproyecto.plateamiento}}"></ion-textarea>
     </ion-item>
     <ion-item>
       <ion-textarea label="Justificacion:" disabled labelPlacement="floating" value="{{this.anteproyecto.justificacion}}"></ion-textarea>
     </ion-item>
+    <ion-item>
+      <ion-textarea label="Hipotesis" disabled labelPlacement="floating" value="{{this.anteproyecto.hipotesis}}"></ion-textarea>
+    </ion-item>
+
+    <ion-item>
+      <ion-select aria-label="opciones" [(ngModel)]="this.op" placeholder="Seleciona una opcion">
+        <ion-select-option value="Titulo">Titulo</ion-select-option>
+        <ion-select-option value="Descripcion">Descripción</ion-select-option>
+        <ion-select-option value="Planteamiento">Planteamiento</ion-select-option>
+        <ion-select-option value="Objetivo">Objetivo</ion-select-option>
+        <ion-select-option value="Hipotesis">Hipotesis</ion-select-option>
+        <ion-select-option value="Justificacion">Justificación</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-textarea label="Comentario:" labelPlacement="floating" [(ngModel)]="this.comentario"></ion-textarea>
+    </ion-item>
+
   </ion-list>
-  <ion-item>
-    <ion-select aria-label="opciones" [(ngModel)]="this.op" placeholder="Seleciona una opcion">
-      <ion-select-option value="titulo">Titulo</ion-select-option>
-      <ion-select-option value="desc">Descripción</ion-select-option>
-      <ion-select-option value="plan">Planteamiento</ion-select-option>
-      <ion-select-option value="objetivo">Objetivo</ion-select-option>
-      <ion-select-option value="hipo">Hipotesis</ion-select-option>
-      <ion-select-option value="justi">Justificación</ion-select-option>
-    </ion-select>
-  </ion-item>
-  <ion-item>
-    <ion-textarea label="Comentario:" labelPlacement="floating" [(ngModel)]="this.comentario"></ion-textarea>
-  </ion-item>
+
     </ion-content>
   </ng-template>
 </ion-modal>
