--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1"  *ngIf="rol==='estudiante'">
+    <ion-tab-button tab="tab1/estudiante" *ngIf="rol==='estudiante'">
       <ion-icon aria-hidden="true" name="create-outline"></ion-icon>
       <ion-label>Anteproyecto</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2" *ngIf="rol==='admin'">
+    <ion-tab-button tab="tab2/admin" *ngIf="rol==='admin'">
       <ion-icon aria-hidden="true" name="reorder-four-outline"></ion-icon>
       <ion-label>Lista</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="tab3">
       <ion-icon aria-hidden="true" name="person-outline"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
